newCodeClassField(ClassifierCodeDocument*, UMLRole*): Add missing call to  CodeClassField::finishInitialization() on the retval. BUG:149357
svn path=/trunk/KDE/kdesdk/umbrello/; revision=706449

--- a/ChangeLog.2
+++ b/ChangeLog.2
@@ -31,3 +31,4 @@ Version 2.0  (First Qt4/KDE4 based version)
 * RMB LogicalView->New->Class in treeview creates TWO classes (144537)
 * New code generator for D language
 * Add option for automatic drawing attribute associations in class diagram (147061)
+* Crash on saving phonon design.xmi with Advanced Code Generators enabled (149357)
