removeAllAssociationEnds(): I tried different iteration schemes (e.g. using UMLObjectListIt or UMLObjectList::iterator) but the only one that works for me without crashing is this here, using the integer index and QList::removeAt(). BUG:149356
svn path=/trunk/KDE/kdesdk/umbrello/; revision=707073

--- a/ChangeLog.2
+++ b/ChangeLog.2
@@ -15,7 +15,7 @@ Version 2.0  (First Qt4/KDE4 based version)
       * Found / Lost Messages.
   - Sequence Diagram
       * Pre/Post conditions.
-      * ‘accept time event’ symbol.
+      * "accept time event" symbol.
       * Control Flow.
       * Object Flow.
       * interruptible region.
@@ -31,4 +31,5 @@ Version 2.0  (First Qt4/KDE4 based version)
 * RMB LogicalView->New->Class in treeview creates TWO classes (144537)
 * New code generator for D language
 * Add option for automatic drawing attribute associations in class diagram (147061)
+* Crash on exit after loading phonon design.xmi (149356)
 * Crash on saving phonon design.xmi with Advanced Code Generators enabled (149357)
