Remove calls to reimplemented virtual functions from within constructors of  advanced code generator classes. BUG:149457
svn path=/trunk/KDE/kdesdk/umbrello/; revision=707609

--- a/ChangeLog.2
+++ b/ChangeLog.2
@@ -33,3 +33,4 @@ Version 2.0  (First Qt4/KDE4 based version)
 * Add option for automatic drawing attribute associations in class diagram (147061)
 * Crash on exit after loading phonon design.xmi (149356)
 * Crash on saving phonon design.xmi with Advanced Code Generators enabled (149357)
+* Crash on exit after loading XMI file with Advanced Code Generators enabled (149457)
