apply r728591 and r732152 from trunk
svn path=/branches/KDE/3.5/kdesdk/umbrello/; revision=732208

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@ Version 1.5.8
 * Moving component on diagram results in absurd shape of self-association (147810)
 * Crash when changing the attribute name (147919)
 * Reads XMI exported by version 1.5 but crashes when rereading after saving (147988)
+* Patch: Correct C# constructors (no return type) (150988)
 
 Version 1.5.71
 
