--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,41 @@
+Version 2.0.0  (First Qt4/KDE4 based version)
+
+* Bugs/wishes from http://bugs.kde.org:
+* Turn off header/footer and page numbers when printing (69113)
+* Code generation and undo/redo take up too much memory (72644)
+  - Use the KUndoStack derived from QT4 QUndoStack in order to manage commands.
+  - Commands are stored in cmds folder.
+* Switching between tabbed and non-tabbed views requires restart (98204)
+* Recursively scan source files when reverse engineering (109157)
+* Implement the UML 2.0 standard (115269)
+  - Sequence Diagram
+    * Combined Fragments
+      * Operators : Alternative, Option, Break, Parallel, Reference, Negative, Critical
+		Ignore, Consider, Assertion, Loop.
+      * Found / Lost Messages.
+  - Sequence Diagram
+      * Pre/Post conditions.
+      * "accept time event" symbol.
+      * Control Flow.
+      * Object Flow.
+      * interruptible region.
+      * expansion region.
+      * Control node : flow final.
+      * Transformation.
+      * Objects nodes :  
+        * Activity Invoke.
+        * Activity Parameter Nodes.
+        * Central buffer nodes.
+        * Data stores nodes.
+        * Input / Output / Constant Pins.
+* RMB LogicalView->New->Class in treeview creates TWO classes (144537)
+* New code generator for D language
+* Add option for automatic drawing attribute associations in class diagram (147061)
+* Crash on exit after loading phonon design.xmi (149356)
+* Crash on saving phonon design.xmi with Advanced Code Generators enabled (149357)
+* Crash on exit after loading XMI file with Advanced Code Generators enabled (149457)
+* Patch: Correct C# constructors - no return type (150988)
+
 Version 1.5.8
 
 * Bugs/wishes from http://bugs.kde.org:
