big things are happening on branches/work/soc-umbrello
svn path=/trunk/KDE/kdesdk/umbrello/; revision=829787

--- a/THANKS
+++ b/THANKS
@@ -48,6 +48,7 @@ Kleag (kleag @free.fr)
 Tobias Koenig <tokoe @kde.org>
 Piotr Kolaczkowski <P.Kolaczkowski @elka.pw.edu.pl>
 Matthias Kretz <kretz @kde.org>
+Gopala Krishna <krishna.ggk@gmail.com>
 Thorsten Kunz <tk @bytecrash.net>
 Dmitry N. Kurashkin <dkur @nm.ru>
 Jari-Matti Mäkelä <jmjm @iki.fi>
